--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>available-hotels</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>available-hotels</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Available Hotels</description>
 
     <properties>
         <java.version>1.8</java.version>
